# raspirus_os

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: bsp.rs  cpu.rs  main.rs  panic_wait.rs
src/_arch/aarch64/cpu/: boot.S  boot.rs
src/bsp/raspberrypi/: link.ld
src/cpu/: boot.rs
target_configs/: arm-raspirus_os.json
