[package]
name = "raspirus_os"
version = "0.1.0"
authors = ["Mike Smith <mike@noiseparticles.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
